fix: remove fields of product swagger script on GetProductsController
